2001-08-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (EvalNamespace): fixed to work when attached to a
	foreign interpreter. [Bug #453431]
	Added fix that allows access to Tk privates in 8.4.  Still needs
	a long-term fix. [Bug #450865] (porter)

2001-08-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (EvalCmd): protected against non-existent
	tkPriv(mouseMoved) variable

2001-07-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (RetrieveFilter, RetrieveAuthentication): added
	support for retrieving latest tkcon via a proxy. (Thoyts)

2001-07-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (tkcon): made tkcon console return whatever result it
	received.  Fixed Bug #438281.

2001-06-20  Jeff Hobbs  <jeffh@ActiveState.com>

	TKCON 2.2 RELEASE

	* README.txt:
	* index.html:
	* docs/index.html: updated for 2.2 release

	* tkcon.tcl (InitUI): moved wm protocol inside check to not run
	under plugin.
	(::tkcon::Retrieve): added a new method to allow tkcon to retrieve
	the latest version of itself.

2001-06-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (dir): added fallback in generic dir command to not
	require being run in tkcon.
	(Init): Changed around how all options are initialized to allow
	for tkcon embedders to set their own defaults.  Added a usehistory
	PRIV key that tells us whether to load/save history files.  Added
	showOnStartup PRIV key to control whether tkcon should deiconify
	itself on startup.  Changed setting root to .tkcon to ensure that
	root was just . before.

2001-06-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: (InitUI) added WM_DELETE_WINDOW hook to exit to
	correctly deconstruct slave consoles.
	(tkcon congets/getc) added tkcon show to ensure that tkcon would
	be displayed when input is expected.
	(GetSelection) new command to handle getting selection, this
	supports the new UTF8_STRING type.
	(InitMenus) added version check around Attach to Socket menu, as
	8.3 is need for the file channels call.
